@@ -17,6 +17,8 @@ javac -d bin -sourcepath src src/net/reseau/electric/*.java src/net/reseau/elect
 
 ### Exécution
 
+#### Mode console
+
 **Sans argument** (mode interactif) :
 ```bash
 java -cp bin net.reseau.electric.Main
@@ -32,7 +34,38 @@ Exemple :
 java -cp bin net.reseau.electric.Main src/net/reseau/electric/io/instance1.txt
 ```
 
-**Tests** 
+#### Interface graphique (JavaFX)
+
+**Note importante** : L'interface graphique nécessite JavaFX qui n'est pas inclus dans le projet à part les fichiers .jar
+
+**Résumé rapide :**
+
+1. Téléchargez JavaFX SDK 25.0.1 depuis https://gluonhq.com/products/javafx/ (choisir la version correspondant au système)
+
+2. Compilation avec JavaFX :
+```bash
+# macOS/Linux
+# Remplacer /chemin/vers/javafx-sdk-25.0.1/lib par le chemin réel
+javac --module-path "/chemin/vers/javafx-sdk-25.0.1/lib" --add-modules javafx.controls,javafx.fxml -d bin src/net/reseau/electric/*.java src/net/reseau/electric/**/*.java
+
+Exemple : 
+javac --module-path "/Users/yennhi/Documents/PAA/ProjetPAA/ReseauDistribution/javafx-sdk-25.0.1/lib" --add-modules javafx.controls,javafx.fxml -d bin src/net/reseau/electric/*.java src/net/reseau/electric/**/*.java
+
+# Windows
+javac --module-path "C:\chemin\vers\javafx-sdk-25.0.1\lib" --add-modules javafx.controls,javafx.fxml -d bin src/net/reseau/electric/*.java src/net/reseau/electric/**/*.java
+```
+
+3. Exécution de l'interface graphique :
+```bash
+# macOS/Linux
+java --module-path "/chemin/vers/javafx-sdk-25.0.1/lib" --add-modules javafx.controls,javafx.fxml -cp bin net.reseau.electric.gui.MainFX
+
+# Windows
+java --module-path "C:\chemin\vers\javafx-sdk-25.0.1\lib" --add-modules javafx.controls,javafx.fxml -cp bin net.reseau.electric.gui.MainFX
+```
+
+#### Tests 
+```bash
 java -jar lib/junit-platform-console-standalone-1.9.3.jar --class-path bin:test --scan-class-path
 ```
 
@@ -42,17 +75,28 @@ src/
 └── net/
     └── reseau/
         └── electric/
-            ├── Main.java           (Point d'entrée du programme)
+            ├── Main.java           (Point d'entrée du programme console)
             ├── Reseau.java         (Gestion du réseau électrique)
             ├── Generateur.java     (Classe générateur)
             ├── Maison.java         (Classe maison)
-            └── TypeMaison.java     (Énumération des types de maison)
+            ├── TypeMaison.java     (Énumération des types de maison)
             ├── algoOptimal/
             │   └── AlgoOptimal.java    (Algorithme d'optimisation)
+            ├── gui/
+            │   └── MainFX.java     (Interface graphique JavaFX)
             └── io/
                 ├── ReseauExporter.java (Export vers fichier)
                 └── ReseauImporter.java (Import depuis fichier)
 bin/                                (Fichiers .class compilés)
+lib/                                (Bibliothèques externes)
+    └── junit-platform-console-standalone-1.9.3.jar
+test/                               (Tests unitaires)
+└── net/
+    └── reseau/
+        └── electric/
+            ├── GenerateurTest.java
+            ├── MaisonTest.java
+            └── ReseauTest.java
 ```
 
 ## Algorithme d'optimisation
@@ -84,7 +128,7 @@ Le coût est calculé selon : **Coût = Dispersion + λ × Surcharge**
 
 1. **Gestion du réseau**
    - Ajout de générateurs avec capacité
-   - Ajout de maisons avec 3 types (BASSE: 10kW, NORMALE: 20kW, FORTE: 40kW)
+   - Ajout de maisons avec 3 types (BASSE: 10kW, NORMAL: 20kW, FORTE: 40kW)
    - Ajout de connexions maison-générateur
    - Suppression de connexions
    - Modification de connexions
